--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -167,4 +167,9 @@
 
     <style name="BottomSheetMenuTheme" parent="@style/BaseBottomSheetMenu" />
 
+    <!-- Multiline collapsing toolbar styles -->
+    <style name="Widget.Design.MultilineCollapsingToolbar" parent="@style/Widget.Design.CollapsingToolbar" />
+
+    <style name="ActionBar.Title" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
+
 </resources>
