--- a/presentation/src/main/res/layout/activity_home.xml
+++ b/presentation/src/main/res/layout/activity_home.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:background="@android:color/black"
+        android:background="@drawable/bg_dark_space"
         android:fitsSystemWindows="true"
         tools:context=".view.ui.HomeActivity">
 
@@ -28,17 +28,14 @@
                 android:id="@+id/toolbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/black"
                 android:fitsSystemWindows="true"
                 android:soundEffectsEnabled="true"
                 app:collapsedTitleGravity="start"
                 app:collapsedTitleTextAppearance="@style/CasualSmallTextAppearance"
-                app:contentScrim="@android:color/black"
                 app:expandedTitleGravity="bottom|center"
                 app:expandedTitleTextAppearance="@style/CasualTextAppearance"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:scrimAnimationDuration="@android:integer/config_longAnimTime"
-                app:statusBarScrim="@android:color/black"
                 app:title="@string/home_onboarding_title"
                 app:toolbarId="@+id/toolbar">
 
