--- a/presentation/src/main/res/layout/activity_all_countries.xml
+++ b/presentation/src/main/res/layout/activity_all_countries.xml
@@ -8,7 +8,8 @@
     android:animateLayoutChanges="true"
     android:animationCache="true"
     android:background="@android:color/black"
-    android:persistentDrawingCache="animation">
+    android:persistentDrawingCache="animation"
+    tool:ignore="Overdraw">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
