--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- region Paddings/Margins/Offsets -->
     <dimen name="offset_1">1dp</dimen>
     <dimen name="offset_2">2dp</dimen>
@@ -32,7 +32,7 @@
     <!-- heights -->
     <dimen name="height_list_item_tablet">60dp</dimen>
     <dimen name="height_toolbar_all_countries">72dp</dimen>
-    <dimen name="height_share_btn">120dp</dimen>
+    <dimen name="height_share_btn" tools:keep="@dimen/height_share_btn">120dp</dimen>
     <dimen name="height_bottom_sheet">400dp</dimen>
     <dimen name="height_app_bar">300dp</dimen>
     <dimen name="height_splash_logo">351dp</dimen>
@@ -41,7 +41,7 @@
     <dimen name="width_arrow_tablet">60dp</dimen>
     <dimen name="width_smallest_screen">360dp</dimen>
     <dimen name="width_splash_logo">361dp</dimen>
-    <dimen name="width_facebook_icon">390dp</dimen>
+    <dimen name="width_facebook_icon" tools:keep="@dimen/width_facebook_icon">390dp</dimen>
 
     <!-- radii -->
     <dimen name="radius_cardview">4dp</dimen>
