add error dialog in AddCityDialogFragment.kt

--- a/presentation/src/main/res/layout/activity_all_countries.xml
+++ b/presentation/src/main/res/layout/activity_all_countries.xml
@@ -9,7 +9,8 @@
     android:animationCache="true"
     android:background="@android:color/black"
     android:persistentDrawingCache="animation"
-    tool:ignore="Overdraw">
+    tool:ignore="Overdraw"
+    tool:keep="@layout/activity_all_countries">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
