changed background and add search_bar.xml

--- a/presentation/src/main/res/drawable-v23/gradient_blue.xml
+++ b/presentation/src/main/res/drawable-v23/gradient_blue.xml
@@ -2,13 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
     <item
-        android:width="@dimen/width_smallest_screen"
         android:gravity="center">
-        <shape
-            android:shape="oval">
+        <shape android:shape="rectangle">
             <gradient
                 android:angle="225"
-                android:centerColor="@color/colorPrimaryDark"
+                android:centerColor="@color/colorBrightBlue"
                 android:endColor="#510A90"
                 android:startColor="#031B71" />
         </shape>
