--- a/presentation/src/main/res/drawable-v23/gradient_green.xml
+++ b/presentation/src/main/res/drawable-v23/gradient_green.xml
@@ -2,15 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
     <item
-        android:width="@dimen/width_smallest_screen"
         android:gravity="center">
-        <shape
-            android:shape="oval">
+        <shape android:shape="rectangle">
             <gradient
                 android:angle="45"
-                android:endColor="#CCE100"
-                android:centerColor="#006A05"
-                android:startColor="#00ADFB" />
+                android:centerColor="#015E23"
+                android:endColor="#024303"
+                android:startColor="#038E05" />
         </shape>
     </item>
 </layer-list>
