--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
 
     <!--region Elevations-->
     <dimen name="elevation_1">1dp</dimen>
+    <dimen name="elevation_default">2dp</dimen>
     <dimen name="elevation_2">2dp</dimen>
     <dimen name="elevation_4">4dp</dimen>
     <dimen name="elevation_8">8dp</dimen>
@@ -30,7 +31,7 @@
 
     <!-- heights -->
     <dimen name="height_list_item_tablet">60dp</dimen>
-    <dimen name="height_toolbar_all_countries">72dp</dimen>
+    <dimen name="height_toolbar_all_countries">68dp</dimen>
     <dimen name="height_share_btn" tools:keep="@dimen/height_share_btn">120dp</dimen>
     <dimen name="height_bottom_sheet">400dp</dimen>
     <dimen name="height_app_bar">300dp</dimen>
@@ -44,7 +45,9 @@
 
     <!-- radii -->
     <dimen name="radius_cardview">4dp</dimen>
+    <dimen name="corner_radius_default">8dp</dimen>
     <dimen name="radius_dialogue_corners">12dp</dimen>
+    <dimen name="corner_radius_rounded">28dp</dimen>
 
     <!-- sizes -->
     <dimen name="size_home_fab_custom">224dp</dimen>
