--- a/presentation/src/main/res/drawable/gradient_blue.xml
+++ b/presentation/src/main/res/drawable/gradient_blue.xml
@@ -3,11 +3,10 @@
     android:opacity="opaque">
     <item
         android:gravity="center">
-        <shape
-            android:shape="oval">
+        <shape android:shape="rectangle">
             <gradient
                 android:angle="225"
-                android:centerColor="@color/colorPrimaryDark"
+                android:centerColor="@color/colorBrightBlue"
                 android:endColor="#510A90"
                 android:startColor="#031B71" />
         </shape>
