--- a/presentation/src/main/res/values/integers.xml
+++ b/presentation/src/main/res/values/integers.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    # milliseconds, desired time passed between two back presses. -->
+    <!--    # milliseconds, desired time passed between two back presses. -->
     <integer name="desired_time_interval">2000</integer>
+    <integer name="enter_fade_duration">2000</integer>
+    <integer name="exit_fade_duration">4000</integer>
     <integer name="click_interval">1000</integer>
     <!-- Constants for the app. -->
     <integer name="location_and_storage_request_code">10001</integer>
