--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -6,7 +6,9 @@
         <item name="colorPrimaryDark">@android:color/transparent</item>
         <item name="colorAccent">@android:color/white</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/black</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
     <!-- App theme without action bar -->
@@ -20,24 +22,6 @@
         <item name="colorPrimaryDark">@android:color/black</item>
         <item name="android:windowBackground">@drawable/layout_launch_screen</item>
         <item name="android:navigationBarColor">@android:color/black</item>
-    </style>
-
-    <!-- AppTheme for firebase authentication -->
-    <style name="AuthTheme" parent="FirebaseUI">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <!-- app bar -->
-        <item name="colorControlNormal">@android:color/transparent</item>
-        <!-- color of progress bar -->
-        <item name="colorControlActivated">@android:color/white</item>
-        <!-- ripple effect -->
-        <item name="colorControlHighlight">@android:color/white</item>
-        <!-- Required for sign-in flow styling -->
-        <!-- app bar -->
-        <item name="colorPrimary">@android:color/transparent</item>
-        <!-- status bar -->
-        <item name="colorPrimaryDark">@android:color/transparent</item>
-        <!-- Hyperlink color -->
-        <item name="colorAccent">@android:color/white</item>
     </style>
 
     <style name="RecyclerViewStyle">
@@ -118,7 +102,7 @@
     </style>
 
     <style name="ShadowLayout">
-        <item name="containerBackgroundColor">@android:color/black</item>
+        <item name="containerBackgroundColor">@android:color/transparent</item>
         <item name="shadowGravity">bottom</item>
         <item name="shadowRadius">@dimen/offset_12</item>
         <item name="containerElevation">@dimen/elevation_12</item>
@@ -167,4 +151,28 @@
 
     <style name="BottomSheetMenuTheme" parent="@style/BaseBottomSheetMenu" />
 
+    <!-- Multiline collapsing toolbar styles -->
+    <style name="Widget.Design.MultilineCollapsingToolbar" parent="@style/Widget.Design.CollapsingToolbar" />
+
+    <style name="ActionBar.Title" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
+
+    <!-- Expandable Search Bar Dark Theme -->
+    <style name="ExpandableSearchBarDark" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="searchBarBackgroundColor">@color/searchBarPrimaryColorDark</item>
+        <item name="searchIconTint">@color/searchBarSearchIconTintColorDark</item>
+        <item name="clearIconTint">@color/searchBarClearIconTintColorDark</item>
+        <item name="backIconTint">@color/searchBarBackIconTintColorDark</item>
+        <item name="textColor">@color/searchBarTextColorDark</item>
+        <item name="hintColor">@color/searchBarHintColorDark</item>
+    </style>
+
+    <!-- Expandable Search Bar Light Theme -->
+    <style name="ExpandableSearchBarLight" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="searchBarBackgroundColor">@color/searchBarPrimaryColor</item>
+        <item name="searchIconTint">@color/searchBarSearchIconTintColor</item>
+        <item name="clearIconTint">@color/searchBarClearIconTintColor</item>
+        <item name="backIconTint">@color/searchBarBackIconTintColor</item>
+        <item name="textColor">@color/searchBarTextColor</item>
+        <item name="hintColor">@color/searchBarHintColor</item>
+    </style>
 </resources>
