--- a/presentation/src/main/res/layout/activity_flags.xml
+++ b/presentation/src/main/res/layout/activity_flags.xml
@@ -4,6 +4,7 @@
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:background="@android:color/black">
 
     <com.google.android.material.appbar.AppBarLayout
