--- a/presentation/src/main/res/values/attrs.xml
+++ b/presentation/src/main/res/values/attrs.xml
@@ -15,9 +15,41 @@
 
     <declare-styleable name="ResizableTextView">
         <attr name="text_type" format="enum">
-            <enum name="title" value="2"/>
-            <enum name="caption" value="1"/>
-            <enum name="body" value="0"/>
+            <enum name="title" value="2" />
+            <enum name="caption" value="1" />
+            <enum name="body" value="0" />
         </attr>
+    </declare-styleable>
+
+    <declare-styleable name="CollapsingToolbarLayoutExtension">
+        <attr name="maxLines" format="integer" />
+        <attr name="lineSpacingExtra" format="float" />
+        <attr name="lineSpacingMultiplier" format="float" />
+    </declare-styleable>
+
+    <declare-styleable name="ExpandableSearchBar">
+
+        <!-- ExpandableSearchBar Base Attributes-->
+        <attr name="isRounded" format="boolean" />
+        //(API 21+ , Will Revert To Default Shape On Lower
+        <attr name="autoCollapse" format="boolean" />
+        <attr name="searchBarBackgroundColor" format="color" />
+        <attr name="searchBarBackgroundColorFocused" format="color" />
+        <attr name="searchBarElevation" format="dimension" />
+        <attr name="searchBarCornerRadius" format="dimension" />
+
+        <!-- ExpandableSearchBar Icons Attributes -->
+        <attr name="searchIconDrawable" format="reference" />
+        <attr name="backIconDrawable" format="reference" />
+        <attr name="clearIconDrawable" format="reference" />
+        <attr name="searchIconTint" format="color" />
+        <attr name="backIconTint" format="color" />
+        <attr name="clearIconTint" format="color" />
+
+        <!-- ExpandableSearchBar Text Attributes -->
+        <attr name="textColor" format="color" />
+        <attr name="hint" format="string" />
+        <attr name="hintColor" format="color" />
+
     </declare-styleable>
 </resources>
