--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimaryDark">#011638</color>
     <color name="colorBrightBlue">#020DE1</color>
     <color name="colorAccent">#d50000</color>
@@ -29,15 +29,19 @@
 
     <!-- Base Dark Colors -->
     <color name="searchBarPrimaryColorDark">#303030</color>
-    <color name="searchBarCursorColorDark">@color/searchBarIconColorDark</color>
-    <color name="searchBarDividerColorDark">#1FFFFFFF</color>
+    <color name="searchBarCursorColorDark" tools:ignore="UnusedResources">
+        @color/searchBarIconColorDark
+    </color>
+    <color name="searchBarDividerColorDark" tools:keep="@color/searchBarDividerColorDark">
+        #1FFFFFFF
+    </color>
 
     <!-- Text Dark Colors -->
     <color name="searchBarTextColorDark">#DEFFFFFF</color>
     <color name="searchBarHintColorDark">#42FFFFFF</color>
 
     <!-- Base Light Colors -->
-    <color name="searchBarPrimaryColor">#FFFFFF</color>
-    <color name="searchBarCursorColor">#8000a1ff</color>
-    <color name="searchBarDividerColor">#1F000000</color>
+    <color name="searchBarPrimaryColor" tools:ignore="UnusedResources">#FFFFFF</color>
+    <color name="searchBarCursorColor" tools:keep="@color/searchBarCursorColor">#8000a1ff</color>
+    <color name="searchBarDividerColor" tools:ignore="UnusedResources">#1F000000</color>
 </resources>
