--- a/presentation/src/main/res/layout/activity_flags.xml
+++ b/presentation/src/main/res/layout/activity_flags.xml
@@ -5,17 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    tool:ignore="Overdraw">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                app:theme="@style/ToolbarTitleStyle"
-                app:titleTextColor="@android:color/white"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            app:theme="@style/ToolbarTitleStyle"
+            app:titleTextColor="@android:color/white"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 android:layout_width="match_parent"
                 app:navigationIcon="?attr/homeAsUpIndicator"
