--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- region Paddings/Margins/Offsets -->
     <dimen name="offset_1">1dp</dimen>
     <dimen name="offset_2">2dp</dimen>
@@ -15,11 +15,12 @@
     <dimen name="offset_64">64dp</dimen>
 
     <!--region Elevations-->
-    <dimen name="elevation_1">1dp</dimen>
+    <dimen name="elevation_1" tools:keep="@dimen/elevation_1">1dp</dimen>
+    <dimen name="elevation_default" tools:keep="@dimen/elevation_default">2dp</dimen>
     <dimen name="elevation_2">2dp</dimen>
     <dimen name="elevation_4">4dp</dimen>
-    <dimen name="elevation_8">8dp</dimen>
-    <dimen name="elevation_12">12dp</dimen>
+    <dimen name="elevation_8" tools:keep="@dimen/elevation_8">8dp</dimen>
+    <dimen name="elevation_12" tools:keep="@dimen/elevation_12">12dp</dimen>
 
     <!--region Typography-->
     <!--https://material.io/develop/android/theming/typography/-->
@@ -30,21 +31,23 @@
 
     <!-- heights -->
     <dimen name="height_list_item_tablet">60dp</dimen>
-    <dimen name="height_toolbar_all_countries">72dp</dimen>
-    <dimen name="height_share_btn">120dp</dimen>
+    <dimen name="height_toolbar_all_countries">68dp</dimen>
+    <dimen name="height_share_btn" tools:keep="@dimen/height_share_btn">120dp</dimen>
     <dimen name="height_bottom_sheet">400dp</dimen>
     <dimen name="height_app_bar">300dp</dimen>
     <dimen name="height_splash_logo">351dp</dimen>
 
     <!-- widths -->
     <dimen name="width_arrow_tablet">60dp</dimen>
-    <dimen name="width_smallest_screen">360dp</dimen>
+    <dimen name="width_smallest_screen" tools:keep="@dimen/width_smallest_screen">360dp</dimen>
     <dimen name="width_splash_logo">361dp</dimen>
-    <dimen name="width_facebook_icon">390dp</dimen>
+    <dimen name="width_facebook_icon" tools:keep="@dimen/width_facebook_icon">390dp</dimen>
 
     <!-- radii -->
     <dimen name="radius_cardview">4dp</dimen>
+    <dimen name="corner_radius_default">8dp</dimen>
     <dimen name="radius_dialogue_corners">12dp</dimen>
+    <dimen name="corner_radius_rounded">28dp</dimen>
 
     <!-- sizes -->
     <dimen name="size_home_fab_custom">224dp</dimen>
@@ -52,5 +55,7 @@
     <dimen name="size_home_fab_max_image">192dp</dimen>
     <dimen name="size_all_countries_fab_max_image">34dp</dimen>
     <dimen name="size_max_float_btn">60dp</dimen>
+
+    <item name="thumbnail" format="float" type="dimen">0.5</item>
 
 </resources>
