--- a/presentation/src/main/res/values/attrs.xml
+++ b/presentation/src/main/res/values/attrs.xml
@@ -4,13 +4,13 @@
         <attr name="containerBackgroundColor" format="color" />
         <attr name="shadowRadius" format="dimension" />
         <attr name="shadowColor" format="color" />
-        <attr name="containerElevation" format="dimension"/>
-        <attr name="shadowGravity" format="string"/>
-        <attr name="shadowMarginTop" format="dimension"/>
-        <attr name="shadowMarginStart" format="dimension"/>
-        <attr name="shadowMarginEnd" format="dimension"/>
-        <attr name="shadowMarginBottom" format="dimension"/>
-        <attr name="scaleViewOnElevationChange" format="boolean"/>
+        <attr name="containerElevation" format="dimension" />
+        <attr name="shadowGravity" format="string" />
+        <attr name="shadowMarginTop" format="dimension" />
+        <attr name="shadowMarginStart" format="dimension" />
+        <attr name="shadowMarginEnd" format="dimension" />
+        <attr name="shadowMarginBottom" format="dimension" />
+        <attr name="scaleViewOnElevationChange" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="ResizableTextView">
@@ -31,7 +31,7 @@
 
         <!-- ExpandableSearchBar Base Attributes-->
         <attr name="isRounded" format="boolean" />
-        //(API 21+ , Will Revert To Default Shape On Lower
+        <!-- API 21+ , Will Revert To Default Shape On Lower-->
         <attr name="autoCollapse" format="boolean" />
         <attr name="searchBarBackgroundColor" format="color" />
         <attr name="searchBarBackgroundColorFocused" format="color" />
