--- a/presentation/src/main/res/layout/activity_home.xml
+++ b/presentation/src/main/res/layout/activity_home.xml
@@ -53,6 +53,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:elevation="@dimen/elevation_4"
+                        android:layout_marginTop="30dp"
                         android:soundEffectsEnabled="true"/>
 
                 </FrameLayout>
